# birb

./: .gitignore  Cargo.toml  README.md  birb-core.h
SwiftBirb/: build.rs
SwiftBirb/SwiftBirb/: CoreExtensions.swift  SBHostingView.swift  SBLayer.swift  SBNode.swift  SwiftBirb.h  SwiftBirb.m  ViewId.swift
SwiftBirb/SwiftBirb.xcodeproj/: project.pbxproj
SwiftBirb/SwiftBirb.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SwiftBirb/SwiftBirb.xcodeproj/xcshareddata/xcschemes/: SwiftBirb.xcscheme
SwiftBirb/src/: lib.rs
core/: Cargo.toml
core/src/: backend.rs  color.rs  events.rs  layer.rs  lib.rs  nv_tree.rs  raw_events.rs  rect.rs  view.rs  view_tree.rs
src/: color.rs  context.rs  events.rs  host.rs  layer.rs  lib.rs  nv_tree.rs  patch.rs  rect.rs  tree.rs  view.rs  view_tree.rs
swift-birb/: Cargo.toml  birb-core.h  build.rs  protocol.h
swift-birb/SwiftBirb/: Bridging-Header.h  ProtocolExtensions.swift  SBHostingView.swift  SBLayer.swift  SBNode.swift  SwiftBirb.h
swift-birb/SwiftBirb.xcodeproj/: project.pbxproj
swift-birb/examples/: sb_test.rs
swift-birb/src/: lib.rs
