[package]
name = "birb"
version = "0.1.0"
authors = ["cpsdqs <cpsdqs@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17"
crossbeam = "0.7"
parking_lot = "0.9"
uuid = { version = "0.7", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
swift-birb = { path = "SwiftBirb" }

[workspace]
